# ux

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  COMPONENTS-GUIDE.md  COMPONENTS_GUIDE.md  LAYOUTS.md  Makefile  README.md  TODO.md  UX_LIBRARY.md  build-modular.js  build.js  build.mjs  index.html  llms-full.txt  llms.txt  package-lock.json  package.json  playwright.config.ts  pyproject.toml  sw.js  ux-all.js  vite.config.esm.js  vite.config.iife.js  vite.config.js
.github/workflows/: ci.yml  deploy.yml  pages.yml  publish.yml  release.yml
apps/auth/: routes.py
apps/home/: routes.py
components/: ux-accordion.js  ux-admin.js  ux-alert.js  ux-alpine-utils.js  ux-app-icon.js  ux-attendance-list.js  ux-audio-player.js  ux-autocomplete.js  ux-avatar.js  ux-back-button.js  ux-badge.js  ux-banner.js  ux-barcode-scanner.js  ux-batch-tracker.js  ux-bom-tree.js  ux-breadcrumbs.js  ux-button-group.js  ux-button.js  ux-calculator.js  ux-calendar-views.js  ux-calendar.js  ux-callout.js  ux-card.js  ux-carousel.js  ux-cart.js  ux-category-tabs.js  ux-chart.js  ux-checkbox.js  ux-chip.js  ux-code-block.js  ux-color-picker.js  ux-command.js  ux-content.js  ux-context-menu.js  ux-core.js  ux-currency-input.js  ux-dashboard-grid.js  ux-datatable.js  ux-date-range-picker.js  ux-datetime.js  (+113 more)
css/: themes.css
docs/: MIGRATION.md  accordion.html  alert.html  alpine-components.js  alpine-utils.html  astro.config.mjs  attendance-list.html  audio-player.html  autocomplete.html  avatar.html  back-button.html  badge.html  banner.html  barcode-scanner.html  batch-tracker.html  bom-tree.html  breadcrumbs.html  button-group.html  button.html  calculator.html  calendar-views.html  calendar.html  callout.html  card.html  carousel.html  cart.html  category-tabs.html  chart.html  checkbox.html  chip.html  code-block.html  collapsible-panel.html  color-picker.html  command.html  content.html  context-menu.html  currency-input.html  dashboard-grid.html  datatable-full.html  datatable.html  (+124 more)
playwright-report/: index.html
previews/: accordion.html  actions-extra.html  app-shell.html  avatar.html  badge.html  breadcrumbs.html  button.html  calendar.html  card.html  charts.html  chat.html  commerce-extra.html  commerce.html  data-extra.html  datatable.html  drawer.html  editors.html  empty.html  forms-advanced.html  forms-extra.html  forms-inputs.html  forms-layout.html  forms-select.html  forms-text.html  hr-extra.html  hr.html  inline-feedback.html  kanban.html  kds.html  kpi.html  layout-extra.html  list.html  manufacturing-extra.html  manufacturing.html  menu-btn.html  mobile-shell.html  mobile.html  modal.html  multimedia-extra.html  multimedia.html  (+22 more)
templates/: _base.html  _base_preview.html  preview_index.html
tests/: components.spec.ts  conftest.py  test_consistency.py  test_macros.py
types/: core.d.ts  index.d.ts
uxsite/: context.py  main.py  settings.py
(+3689 files in other folders)
