[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ux-jinja"
version = "0.1.0"
description = "Jinja2 macros + page templates for the @erplora/ux CSS component library"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [{name = "ERPlora"}]
keywords = ["jinja2", "ux", "components", "datastar", "erplora"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = ["Jinja2>=3.1"]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "syrupy>=4",
    "hotframe>=0.2",
    "uvicorn[standard]>=0.30",
    "playwright>=1.45",
]

[project.urls]
Homepage = "https://erplora.github.io/ux/"
Repository = "https://github.com/ERPlora/ux"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ux_jinja = ["templates/**/*.jinja", "templates/**/*.j2"]
