[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ux-jinja"
version = "0.1.0"
description = "Jinja2 macros + page templates for the @erplora/ux CSS component library"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [{name = "ERPlora", email = "ioanbeilic@gmail.com"}]
maintainers = [{name = "Ioan Beilic", email = "ioanbeilic@gmail.com"}]
keywords = ["jinja2", "ux", "components", "datastar", "erplora", "html", "templates"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Jinja2",
]
dependencies = ["Jinja2>=3.1"]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "syrupy>=4",
    "hotframe>=0.2",
    "uvicorn[standard]>=0.30",
    "playwright>=1.45",
    "build>=1.2",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://erplora.github.io/ux/"
Documentation = "https://erplora.github.io/ux/"
Repository = "https://github.com/ERPlora/ux"
Issues = "https://github.com/ERPlora/ux/issues"
Changelog = "https://github.com/ERPlora/ux/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ux_jinja = ["templates/**/*.jinja", "templates/**/*.j2", "templates/**/*.html"]
